更新 test 目錄及相關檔案

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -2,26 +2,46 @@
 export MAX_CONCURRENCY=4
 AUTOMAKE_OPTION = serial-tests
 
-# unittest: tests that do not need loolwsd running, and that are run during a
-# normal build
-# test: tests that need loolwsd running, and that are run via 'make check'
-check_PROGRAMS = test fakesockettest
+# unittest: tests that run a captive loolwsd as part of themselves.
+check_PROGRAMS = fakesockettest
 
-noinst_PROGRAMS = test fakesockettest unittest
+noinst_PROGRAMS = fakesockettest unittest
 
-AM_CXXFLAGS = $(CPPUNIT_CFLAGS) -DTDOC=\"$(top_srcdir)/test/data\" \
-	-I${top_srcdir}/common -I${top_srcdir}/net -I${top_srcdir}/wsd -I${top_srcdir}/kit
+AM_CXXFLAGS = $(CPPUNIT_CFLAGS) -DTDOC=\"$(abs_top_srcdir)/test/data\" \
+	-I${top_srcdir}/common -I${top_srcdir}/net -I${top_srcdir}/wsd -I${top_srcdir}/kit \
+	-pthread -DLOOLWSD_DATADIR='"@LOOLWSD_DATADIR@"' \
+	-DLOOLWSD_CONFIGDIR='"@LOOLWSD_CONFIGDIR@"' \
+	-DDEBUG_ABSSRCDIR='"@abs_srcdir@"' \
+	${include_paths}
 
 noinst_LTLIBRARIES = \
-	unit-convert.la \
-	unit-timeout.la unit-prefork.la \
-	unit-storage.la unit-client.la \
+	unit-base.la unit-tiletest.la \
+	unit-integration.la unit-httpws.la unit-crash.la \
+	unit-convert.la unit-typing.la unit-copy-paste.la \
+	unit-timeout.la unit-prefork.la unit-storage.la \
 	unit-admin.la unit-tilecache.la \
-	unit-fuzz.la unit-oob.la unit-oauth.la \
+	unit-fuzz.la unit-oob.la unit-http.la unit-oauth.la \
 	unit-wopi.la unit-wopi-saveas.la \
 	unit-wopi-ownertermination.la unit-wopi-versionrestore.la \
-	unit-wopi-documentconflict.la
-
+	unit-wopi-documentconflict.la unit_wopi_renamefile.la unit_wopi_watermark.la \
+	unit-tiff-load.la \
+	unit-large-paste.la \
+	unit-paste.la \
+	unit-load-torture.la \
+	unit-rendering-options.la \
+	unit-password-protected.la \
+	unit-render-shape.la \
+	unit-each-view.la \
+	unit-session.la \
+	unit-uno-command.la \
+	unit-load.la \
+	unit-cursor.la \
+	unit-calc.la \
+	unit-insert-delete.la \
+	unit-close.la \
+	unit-bad-doc-load.la \
+	unit-hosting.la \
+	unit-wopi-loadencoded.la unit-wopi-temp.la
 
 MAGIC_TO_FORCE_SHLIB_CREATION = -rpath /dummy
 AM_LDFLAGS = -pthread -module $(MAGIC_TO_FORCE_SHLIB_CREATION) $(ZLIB_LIBS)
@@ -34,27 +54,18 @@ endif
 # the server side and here in unit tests with conditional compilation
 # based on BUILDING_TESTS
 
-AM_CPPFLAGS = -pthread -I$(top_srcdir) -DBUILDING_TESTS
+AM_CPPFLAGS = -pthread -I$(top_srcdir) -DBUILDING_TESTS -DLOK_ABORT_ON_ASSERTION
 
 wsd_sources = \
             ../common/FileUtil.cpp \
-            ../common/SigUtil.cpp \
             ../common/IoUtil.cpp \
-            ../common/Log.cpp \
             ../common/Protocol.cpp \
-            ../common/Session.cpp \
+            ../common/SpookyV2.cpp \
             ../common/Util.cpp \
-            ../common/MessageQueue.cpp \
+            ../common/Authorization.cpp \
             ../kit/Kit.cpp \
-            ../wsd/Auth.cpp \
-            ../wsd/TileCache.cpp \
-            ../wsd/TestStubs.cpp \
-            ../common/Unit.cpp \
-            ../net/Socket.cpp
-
-if ENABLE_SSL
-wsd_sources += ../net/Ssl.cpp
-endif
+            ../kit/TestStubs.cpp \
+            ../wsd/TileCache.cpp
 
 test_base_source = \
 	TileQueueTests.cpp \
@@ -62,32 +73,52 @@ test_base_source = \
 	DeltaTests.cpp \
 	$(wsd_sources)
 
-test_all_source = \
-	$(test_base_source) \
-	TileCacheTests.cpp \
-	integration-http-server.cpp \
-	httpwstest.cpp \
-	httpcrashtest.cpp \
-	httpwserror.cpp
+unittest_CPPFLAGS = -I$(top_srcdir) -DBUILDING_TESTS -DSTANDALONE_CPPUNIT
+unittest_SOURCES = \
+    $(test_base_source) \
+    ../common/Log.cpp \
+    ../common/MessageQueue.cpp \
+    ../common/Session.cpp \
+    ../common/SigUtil.cpp \
+    ../common/Unit.cpp \
+    ../common/StringVector.cpp \
+    ../net/Socket.cpp \
+    ../wsd/Auth.cpp \
+    ../wsd/TestStubs.cpp \
+    test.cpp
 
-unittest_CPPFLAGS = -I$(top_srcdir) -DBUILDING_TESTS
-unittest_SOURCES = $(test_base_source) test.cpp
+if ENABLE_SSL
+unittest_SOURCES += ../net/Ssl.cpp
+endif
+
 unittest_LDADD = $(CPPUNIT_LIBS)
-
-test_CPPFLAGS = -I$(top_srcdir) -DBUILDING_TESTS
-test_SOURCES = $(test_all_source) test.cpp
-test_LDADD = $(CPPUNIT_LIBS)
 
 fakesockettest_SOURCES = fakesockettest.cpp ../net/FakeSocket.cpp
 fakesockettest_LDADD = $(CPPUNIT_LIBS)
 
+# old-style unit tests - bootstrapped via UnitClient
+unit_base_la_SOURCES = UnitClient.cpp ${test_base_source}
+unit_base_la_LIBADD = $(CPPUNIT_LIBS)
+unit_tiletest_la_SOURCES = UnitClient.cpp TileCacheTests.cpp
+unit_tiletest_la_LIBADD = $(CPPUNIT_LIBS)
+unit_integration_la_SOURCES = UnitClient.cpp integration-http-server.cpp
+unit_integration_la_LIBADD = $(CPPUNIT_LIBS)
+unit_httpws_la_SOURCES = UnitClient.cpp httpwstest.cpp
+unit_httpws_la_LIBADD = $(CPPUNIT_LIBS)
+unit_crash_la_SOURCES = UnitClient.cpp httpcrashtest.cpp
+unit_crash_la_LIBADD = $(CPPUNIT_LIBS)
+
 # unit test modules:
 unit_oob_la_SOURCES = UnitOOB.cpp
+unit_http_la_SOURCES = UnitHTTP.cpp
+unit_http_la_LIBADD = $(CPPUNIT_LIBS)
 unit_fuzz_la_SOURCES = UnitFuzz.cpp
 unit_admin_la_SOURCES = UnitAdmin.cpp
 unit_admin_la_LIBADD = $(CPPUNIT_LIBS)
-unit_client_la_SOURCES = UnitClient.cpp ${test_all_source}
-unit_client_la_LIBADD = $(CPPUNIT_LIBS)
+unit_typing_la_SOURCES = UnitTyping.cpp
+unit_typing_la_LIBADD = $(CPPUNIT_LIBS)
+unit_copy_paste_la_SOURCES = UnitCopyPaste.cpp
+unit_copy_paste_la_LIBADD = $(CPPUNIT_LIBS)
 unit_convert_la_SOURCES = UnitConvert.cpp
 unit_timeout_la_SOURCES = UnitTimeout.cpp
 unit_prefork_la_SOURCES = UnitPrefork.cpp
@@ -105,6 +136,48 @@ unit_wopi_versionrestore_la_SOURCES = UnitWOPIVersionRestore.cpp
 unit_wopi_versionrestore_la_LIBADD = $(CPPUNIT_LIBS)
 unit_wopi_documentconflict_la_SOURCES = UnitWOPIDocumentConflict.cpp
 unit_wopi_documentconflict_la_LIBADD = $(CPPUNIT_LIBS)
+unit_wopi_renamefile_la_SOURCES = UnitWOPIRenameFile.cpp
+unit_wopi_renamefile_la_LIBADD = $(CPPUNIT_LIBS)
+unit_wopi_watermark_la_SOURCES = UnitWOPIWatermark.cpp
+unit_wopi_watermark_la_LIBADD = $(CPPUNIT_LIBS)
+unit_wopi_loadencoded_la_SOURCES = UnitWOPILoadEncoded.cpp
+unit_wopi_loadencoded_la_LIBADD = $(CPPUNIT_LIBS)
+unit_wopi_temp_la_SOURCES = UnitWOPITemplate.cpp
+unit_wopi_temp_la_LIBADD = $(CPPUNIT_LIBS)
+unit_tiff_load_la_SOURCES = UnitTiffLoad.cpp
+unit_tiff_load_la_LIBADD = $(CPPUNIT_LIBS)
+unit_large_paste_la_SOURCES = UnitLargePaste.cpp
+unit_large_paste_la_LIBADD = $(CPPUNIT_LIBS)
+unit_paste_la_SOURCES = UnitPaste.cpp
+unit_paste_la_LIBADD = $(CPPUNIT_LIBS)
+unit_load_torture_la_SOURCES = UnitLoadTorture.cpp
+unit_load_torture_la_LIBADD = $(CPPUNIT_LIBS)
+unit_rendering_options_la_SOURCES = UnitRenderingOptions.cpp
+unit_rendering_options_la_LIBADD = $(CPPUNIT_LIBS)
+unit_password_protected_la_SOURCES = UnitPasswordProtected.cpp
+unit_password_protected_la_LIBADD = $(CPPUNIT_LIBS)
+unit_render_shape_la_SOURCES = UnitRenderShape.cpp
+unit_render_shape_la_LIBADD = $(CPPUNIT_LIBS)
+unit_each_view_la_SOURCES = UnitEachView.cpp
+unit_each_view_la_LIBADD = $(CPPUNIT_LIBS)
+unit_session_la_SOURCES = UnitSession.cpp
+unit_session_la_LIBADD = $(CPPUNIT_LIBS)
+unit_uno_command_la_SOURCES = UnitUNOCommand.cpp
+unit_uno_command_la_LIBADD = $(CPPUNIT_LIBS)
+unit_load_la_SOURCES = UnitLoad.cpp
+unit_load_la_LIBADD = $(CPPUNIT_LIBS)
+unit_cursor_la_SOURCES = UnitCursor.cpp
+unit_cursor_la_LIBADD = $(CPPUNIT_LIBS)
+unit_calc_la_SOURCES = UnitCalc.cpp
+unit_calc_la_LIBADD = $(CPPUNIT_LIBS)
+unit_insert_delete_la_SOURCES = UnitInsertDelete.cpp
+unit_insert_delete_la_LIBADD = $(CPPUNIT_LIBS)
+unit_close_la_SOURCES = UnitClose.cpp
+unit_close_la_LIBADD = $(CPPUNIT_LIBS)
+unit_bad_doc_load_la_SOURCES = UnitBadDocLoad.cpp
+unit_bad_doc_load_la_LIBADD = $(CPPUNIT_LIBS)
+unit_hosting_la_SOURCES = UnitHosting.cpp
+unit_hosting_la_LIBADD = $(CPPUNIT_LIBS)
 
 if HAVE_LO_PATH
 SYSTEM_STAMP = @SYSTEMPLATE_PATH@/system_stamp
@@ -116,18 +189,108 @@ if HAVE_LO_PATH
 check-local:
 	./fakesockettest
 	@fc-cache "@LO_PATH@"/share/fonts/truetype
-	./run_unit.sh --log-file test.log --trs-file test.trs
+
 # FIXME 2: unit-oob.la fails with symbol undefined:
 # UnitWSD::testHandleRequest(UnitWSD::TestRequest, UnitHTTPServerRequest&, UnitHTTPServerResponse&) ,
-TESTS = unit-convert.la unit-prefork.la unit-tilecache.la unit-timeout.la \
+TESTS = \
+	unit-base.la unit-tiletest.la \
+	unit-integration.la unit-httpws.la unit-crash.la \
+	\
+	unit-copy-paste.la unit-typing.la unit-convert.la unit-prefork.la unit-tilecache.la unit-timeout.la \
         unit-oauth.la unit-wopi.la unit-wopi-saveas.la \
         unit-wopi-ownertermination.la unit-wopi-versionrestore.la \
-        unit-wopi-documentconflict.la
-# TESTS = unit-client.la
-# TESTS += unit-admin.la
-# TESTS += unit-storage.la
-else
-TESTS = ${top_builddir}/test/test
+        unit-wopi-documentconflict.la unit_wopi_renamefile.la unit_wopi_watermark.la \
+	unit-http.la \
+	unit-tiff-load.la \
+	unit-large-paste.la \
+	unit-paste.la \
+	unit-load-torture.la \
+	unit-rendering-options.la \
+	unit-password-protected.la \
+	unit-render-shape.la \
+	unit-each-view.la \
+	unit-session.la \
+	unit-uno-command.la \
+	unit-load.la \
+	unit-cursor.la \
+	unit-calc.la \
+	unit-insert-delete.la \
+	unit-close.la \
+	unit-bad-doc-load.la \
+	unit-hosting.la \
+	unit-wopi-loadencoded.la unit-wopi-temp.la
+# TESTS += unit-admin.test
+# TESTS += unit-storage.test
+
+# Start forced grouping of tests using stamp files
+
+# unit-base.log
+unit-tiletest.log : unit-base.log
+unit-integration.log : unit-base.log
+unit-httpws.log : unit-base.log
+unit-crash.log : unit-base.log
+
+group1.log: unit-httpws.log unit-crash.log unit-tiletest.log unit-integration.log
+	touch $@
+
+unit-typing.log     : group1.log
+unit-convert.log    : group1.log
+unit-tilecache.log  : group1.log
+unit-timeout.log    : group1.log
+
+group1a.log: unit-typing.log unit-convert.log unit-tilecache.log unit-timeout.log
+	touch $@
+
+# isolate this one - it's not a happy test.
+unit-copy-paste.log : group1a.log
+
+group2.log: unit-copy-paste.log
+	touch $@
+
+unit-prefork.log : group2.log
+unit-oauth.log : group2.log
+unit-wopi.log : group2.log
+unit-wopi-saveas.log : group2.log
+unit-wopi-ownertermination.log : group2.log
+unit-wopi-versionrestore.log : group2.log
+unit-wopi-documentconflict.log : group2.log
+unit_wopi_renamefile.log : group2.log
+unit_wopi_watermark.log : group2.log
+
+group3.log: unit-oauth.log unit-wopi.log unit-wopi-saveas.log unit-wopi-ownertermination.log unit-wopi-versionrestore.log unit-wopi-documentconflict.log unit_wopi_renamefile.log unit_wopi_watermark.log
+	touch $@
+
+unit-http.log : group3.log
+unit-tiff-load.log : group3.log
+unit-large-paste.log : group3.log
+unit-paste.log : group3.log
+unit-load-torture.log : group3.log
+unit-rendering-options.log : group3.log
+unit-password-protected.log : group3.log
+unit-render-shape.log : group3.log
+unit-each-view.log : group3.log
+
+group4.log: unit-http.log unit-tiff-load.log unit-large-paste.log unit-paste.log unit-load-torture.log unit-rendering-options.log unit-password-protected.log unit-render-shape.log unit-each-view.log
+	touch $@
+
+unit-session.log : group4.log
+unit-uno-command.log : group4.log
+unit-load.log : group4.log
+unit-cursor.log : group4.log
+unit-calc.log : group4.log
+unit-insert-delete.log : group4.log
+
+group5.log: unit-session.log unit-uno-command.log unit-load.log unit-cursor.log unit-calc.log unit-insert-delete.log
+	touch $@
+
+unit-close.log : group5.log
+unit-bad-doc-load.log : group5.log
+unit-hosting.log : group5.log
+unit-wopi-loadencoded.log : group5.log
+unit-wopi-temp.log : group5.log
+
+# end forced grouping
+
 endif
 
 TEST_EXTENSIONS = .la
@@ -145,4 +308,4 @@ all-local: unittest
 	@echo "Running build-time unit tests.  For more thorough testing, please run 'make check'."
 	@echo
 	@fc-cache "@LO_PATH@"/share/fonts/truetype
-	@${top_builddir}/test/unittest
+	@UNITTEST=1 ${top_builddir}/test/unittest
