--- a/test/run_unit.sh.in
+++ b/test/run_unit.sh.in
@@ -11,7 +11,6 @@ abs_top_builddir="${DIR}/.."
 systemplate_path="@SYSTEMPLATE_PATH@"
 enable_debug="@ENABLE_DEBUG@"
 jails_path="@JAILS_PATH@"
-tilecache_path="@TILECACHE_PATH@"
 lo_path="@LO_PATH@"
 valgrind_cmd="valgrind --tool=memcheck --trace-children=no -v --read-var-info=yes"
 verbose=''
@@ -27,6 +26,7 @@ print_help ()
     echo ""
     echo "   --log-file <file>   Log output to this file - default /dev/stderr"
     echo "   --trs-file <file>   Records the results of a test for automake (default /dev/stderr)"
+    echo "   --gdb               Run under gdb if enabled"
     echo "   --valgrind          Run under valgrind if enabled"
     echo "   --verbose           Print out more stuff - if you run out of things to read"
     exit 1
@@ -40,7 +40,8 @@ while test $# -gt 0; do
       --test-name) tst=$2; shift;;
       --log-file)  tst_log=$2; shift;;
       --trs-file)  test_output=$2; shift;;
-      --valgrind)  valgrind=$valgrind_cmd; shift;;
+      --gdb)       trace='gdb --args'; shift;;
+      --valgrind)  trace=$valgrind_cmd; shift;;
       --verbose)   verbose="--verbose";;
       --help)      print_help ;;
   -*) ;; # ignore
@@ -53,17 +54,7 @@ echo "Running ${tst}"
 echo "	$cmd_line"
 
 # drop .la suffix
-tst=`echo $tst | sed s/\.la//`;
-
-if test "z$tst" != "z" && test "z$CPPUNIT_TEST_NAME" != "z"; then
-    # $tst is not empty, but $CPPUNIT_TEST_NAME is set, exit early if they
-    # don't match.
-    if test "z$tst" != "z$CPPUNIT_TEST_NAME"; then
-        touch $tst_log
-        echo ":test-result: SKIP $tst (disabled by CPPUNIT_TEST_NAME)" > $test_output
-        exit 0;
-    fi
-fi
+tst=`echo $tst | sed "s/\.la//"`;
 
 export LOOL_LOGLEVEL=trace
 
@@ -79,68 +70,28 @@ fi
 echo "Test output is '$test_output'"
 echo > $test_output
 
-if test "z$tst" == "z"; then
-     # run the test on a dedicated port
-     export LOOL_TEST_CLIENT_PORT=9984
-     export LOOL_TEST_MASTER_PORT=9985
-
-     echo "Executing external tests"
-     ${valgrind} \
-     ${abs_top_builddir}/loolwsd --o:sys_template_path="$systemplate_path" \
-                                 --o:lo_template_path="$lo_path" \
-                                 --o:child_root_path="$jails_path" \
-                                 --o:tile_cache_path="$tilecache_path" \
-                                 --o:storage.filesystem[@allow]=true \
-                                 --o:logging.level=trace \
-                                 --o:logging.file[@enable]=false \
-                                 --o:ssl.key_file_path="${abs_top_builddir}/etc/key.pem" \
-                                 --o:ssl.cert_file_path="${abs_top_builddir}/etc/cert.pem" \
-                                 --o:ssl.ca_file_path="${abs_top_builddir}/etc/ca-chain.cert.pem" \
-                                 --o:admin_console.username=admin --o:admin_console.password=admin \
-                                 > "$tst_log" 2>&1 &
-     echo "  executing test"
-
-     oldpath=`pwd`
-     cd "${abs_top_builddir}/test"
-     if eval ${valgrind} ./test ${verbose}; then
-	 echo "Test run_test.sh passed."
-	 echo ":test-result: PASS run_test.sh" >> $oldpath/$test_output
-	 retval=0
-     else
-	 echo ":test-result: FAIL run_test.sh" >> $oldpath/$test_output
-	 retval=1
-     fi
-
-     echo "killing $!"
-     kill $!
-
-     exit $retval
-
-else # newer unit tests.
-    echo "Running $tst | $tst_log ...";
-    if ${valgrind} \
+echo "Running $tst | $tst_log ...";
+if ${trace} \
        ${abs_top_builddir}/loolwsd --o:sys_template_path="$systemplate_path" \
-                                   --o:lo_template_path="$lo_path" \
-                                   --o:child_root_path="$jails_path" \
-                                   --o:tile_cache_path="$tilecache_path" \
+       --o:child_root_path="$jails_path" \
                                    --o:storage.filesystem[@allow]=true \
                                    --o:logging.level=trace \
                                    --o:ssl.key_file_path="${abs_top_builddir}/etc/key.pem" \
                                    --o:ssl.cert_file_path="${abs_top_builddir}/etc/cert.pem" \
                                    --o:ssl.ca_file_path="${abs_top_builddir}/etc/ca-chain.cert.pem" \
                                    --o:admin_console.username=admin --o:admin_console.password=admin \
+                                   --o:storage.ssl.enable=false \
                                    --unitlib="${abs_top_builddir}/test/.libs/$tst.so" 2> "$tst_log"; then
         echo "Test $tst passed."
         echo ":test-result: PASS $tst" >> $test_output
-    else
+else
 	cat $tst_log
         echo "============================================================="
         echo "Test failed on unit: $tst re-run with:"
         echo "   $ gdb --args ${abs_top_builddir}/loolwsd --o:sys_template_path=\"$systemplate_path\" \\"
-        echo "         --o:lo_template_path=\"$lo_path\" \\"
         echo "         --o:child_root_path=\"$jails_path\" \\"
-        echo "         --o:tile_cache_path=\"$tilecache_path\" \\"
         echo "         --o:storage.filesystem[@allow]=true \\"
+        echo "         --o:storage.ssl.enable=false \\"
         echo "         --o:logging.level=trace \\"
         echo "         --o:ssl.key_file_path=\"${abs_top_builddir}/etc/key.pem\" \\"
         echo "         --o:ssl.cert_file_path=\"${abs_top_builddir}/etc/cert.pem\" \\"
@@ -151,7 +102,6 @@ else # newer unit tests.
 	echo "   $ less $tst_log # for detailed failure log files"
         echo "============================================================="
         echo ":test-result: FAIL $tst" >> $test_output
-    fi
 fi
 
 # vim:set shiftwidth=4 expandtab:
