更新不須追蹤的檔案列表

--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,5 @@ Makecache
 autogen.input
 loleaflet/src/layer/tile/TilesSection.js
 loleaflet/src/layer/tile/ScrollSection.js
+debian/oxool.postinst
+fonts/00-oxool.conf
