--- a/Makefile.am
+++ b/Makefile.am
@@ -387,6 +387,8 @@ run: all @JAILS_PATH@
 	./oxoolwsd --o:sys_template_path="@SYSTEMPLATE_PATH@" \
 			  --o:security.capabilities="$(CAPABILITIES)" \
 			  --o:child_root_path="@JAILS_PATH@" --o:storage.filesystem[@allow]=true \
+			  --config-file="$(abs_top_srcdir)/oxoolwsd.xml" \
+			  --o:file_server_root_path="$(abs_top_srcdir)" \
 			  --o:ssl.cert_file_path="$(abs_top_srcdir)/etc/cert.pem" \
 			  --o:ssl.key_file_path="$(abs_top_srcdir)/etc/key.pem" \
 			  --o:ssl.ca_file_path="$(abs_top_srcdir)/etc/ca-chain.cert.pem" \
@@ -430,6 +432,8 @@ run-valgrind: all @JAILS_PATH@
 	valgrind --tool=memcheck --trace-children=no -v --read-var-info=yes \
 		./oxoolwsd --o:sys_template_path="@SYSTEMPLATE_PATH@" \
 			  --o:child_root_path="@JAILS_PATH@" --o:storage.filesystem[@allow]=true \
+			  --config-file="$(abs_top_srcdir)/oxoolwsd.xml" \
+			  --o:file_server_root_path="$(abs_top_srcdir)" \
 			  --o:ssl.cert_file_path="$(abs_top_srcdir)/etc/cert.pem" \
 			  --o:ssl.key_file_path="$(abs_top_srcdir)/etc/key.pem" \
 			  --o:ssl.ca_file_path="$(abs_top_srcdir)/etc/ca-chain.cert.pem" \
@@ -446,6 +450,8 @@ run-gdb: all @JAILS_PATH@
 		./oxoolwsd --o:security.capabilities="false" \
 			  --o:sys_template_path="@SYSTEMPLATE_PATH@" \
 			  --o:child_root_path="@JAILS_PATH@" --o:storage.filesystem[@allow]=true \
+			  --config-file="$(abs_top_srcdir)/oxoolwsd.xml" \
+			  --o:file_server_root_path="$(abs_top_srcdir)" \
 			  --o:ssl.cert_file_path="$(abs_top_srcdir)/etc/cert.pem" \
 			  --o:ssl.key_file_path="$(abs_top_srcdir)/etc/key.pem" \
 			  --o:ssl.ca_file_path="$(abs_top_srcdir)/etc/ca-chain.cert.pem" \
@@ -462,6 +468,8 @@ run-callgrind: all @JAILS_PATH@
 		./oxoolwsd --o:security.capabilities="false" \
 			  --o:sys_template_path="@SYSTEMPLATE_PATH@" \
 			  --o:child_root_path="@JAILS_PATH@" --o:storage.filesystem[@allow]=true \
+			  --config-file="$(abs_top_srcdir)/oxoolwsd.xml" \
+			  --o:file_server_root_path="$(abs_top_srcdir)" \
 			  --o:ssl.cert_file_path="$(abs_top_srcdir)/etc/cert.pem" \
 			  --o:ssl.key_file_path="$(abs_top_srcdir)/etc/key.pem" \
 			  --o:ssl.ca_file_path="$(abs_top_srcdir)/etc/ca-chain.cert.pem" \
@@ -478,6 +486,8 @@ run-strace: all @JAILS_PATH@
 		./oxoolwsd --o:security.capabilities="false" \
 			  --o:sys_template_path="@SYSTEMPLATE_PATH@" \
 			  --o:child_root_path="@JAILS_PATH@" --o:storage.filesystem[@allow]=true \
+			  --config-file="$(abs_top_srcdir)/oxoolwsd.xml" \
+			  --o:file_server_root_path="$(abs_top_srcdir)" \
 			  --o:ssl.cert_file_path="$(abs_top_srcdir)/etc/cert.pem" \
 			  --o:ssl.key_file_path="$(abs_top_srcdir)/etc/key.pem" \
 			  --o:ssl.ca_file_path="$(abs_top_srcdir)/etc/ca-chain.cert.pem" \
