增加 git 不須追蹤的檔案

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 
 # Autofoo
 .deps
+.libs
 .dirstamp
 .clang_complete
 .cxx_tags
@@ -35,7 +36,6 @@ stamp-h1
 m4
 debian/loolwsd.postinst
 common/support-public-key.hpp
-compile_commands.json
 
 # Test stuff
 systemplate
@@ -46,7 +46,6 @@ test/data/hello-world.odt
 test/data/hello-world.ods
 test/data/hello-world.odp
 test/fakesockettest
-coolstress
 
 *.o
 *.exe
@@ -55,17 +54,12 @@ cscope*
 loolwsd.log
 *.log.*.gz
 *.lo
-*.mo
+*.la
 
 # loleaflet
-loleaflet/debug
-loleaflet/release
-loleaflet/npm-shrinkwrap.json
-loleaflet/jsconfig.json
-loleaflet/admin/jsconfig.json
 loleaflet/dist
-loleaflet/compilets
-loleaflet/typescript_js
+loleaflet/node_modules
+loleaflet/npm-shrinkwrap.json
 
 connect
 lokitclient
@@ -92,54 +86,17 @@ test/TAGS
 docker/instdir
 docker/builddir
 
-ios/Mobile/Info.plist
-ios/Mobile/Fonts
-ios/Mobile/Branding
-ios/Mobile/Resources/Settings.bundle/Root.plist
+Mobile/Mobile/Info.plist
 
 # symlinks created by configure for the iOS app Xcode project
 lobuilddir-symlink
 pocoinclude-symlink
 pocolib-symlink
 ICU.dat
-ios/Mobile/Assets.xcassets/AppIcon.appiconset
-
-# iOS app build number
-BUNDLE-VERSION
-
-# android stuff
-/android/lib/src/main/assets/dist
-/android/lib/src/main/assets/hello-world.od*
-/android/lib/src/main/cpp/CMakeLists.txt
-
-# gtk fake mobile app
-gtk/mobile
-
-# backup and temporary editor files: the only convenience rules allowed here.
-*~
-.*sw?
-\#*
-.\#*
-*.kdev4
-.kdev_include_paths
-.buckd
-.directory
-.cproject
-.project
-.settings
-.eclipsesettingfile
-eclipsesettingfile.xml
-.clang_complete
-.cxx_tags
-.yavide_proj
-.yavide_session
-.vscode
-*.code-workspace
-Makecache
-
-# autoconf stuff
-autogen.input
-loleaflet/src/layer/tile/TilesSection.js
-loleaflet/src/layer/tile/ScrollSection.js
+Mobile/Mobile/Assets.xcassets/AppIcon.appiconset
 debian/oxool.postinst
+support/authorizer
+support/signature
+support/users
 fonts/00-oxool.conf
+support/oxool.db
