--- a/oxoolwsd.xml.in
+++ b/oxoolwsd.xml.in
@@ -134,6 +134,10 @@
       <angle desc="Watermark angle." type="uint" default="45"></angle>
       <font desc="Font name." type="string" default=""></font>
       <color desc="Watermark text color." type="string" default="#000000"></color>
+      <bold desc="Is the font bold?" type="bool" default="false"></bold>
+      <italic desc="Is the font italic?" type="bool" default="false"></italic>
+      <outline desc="Is the font hollow?" type="bool" default="false"></outline>
+      <shadow desc="Is the font shaded?" type="bool" default="false"></shadow>
       <text desc="Watermark text to be displayed on the document if entered" type="string"></text>
     </watermark>
 
