--- a/loleaflet/Makefile.am
+++ b/loleaflet/Makefile.am
@@ -245,6 +245,8 @@ OXOOL_JS_LST =\
 	src/layer/tile/ScrollSection.ts \
 	src/layer/tile/CanvasTileLayer.js \
 	src/layer/SplitPanesContext.ts \
+	src/layer/vector/CDarkOverlay.ts \
+	src/layer/SplitPanesContext.ts \
 	src/layer/CalcSplitPanesContext.ts \
 	src/layer/vector/CDarkOverlay.ts \
 	src/layer/tile/TileLayer.TableOverlay.js \
