loleaflet: add initial welcome dialog
Change-Id: Ic42ad71fec286fe85e5130951fcab0e11b1563c0
Signed-off-by: Henry Castro <hcastro@collabora.com>

--- a/loleaflet/Makefile.am
+++ b/loleaflet/Makefile.am
@@ -155,7 +155,8 @@ OXOOL_CSS_LST =\
 	$(srcdir)/css/infobar.css
 
 if ENABLE_FEEDBACK
-OXOOL_CSS_LST += $(srcdir)/css/iframedialog.css
+OXOOL_CSS_LST += $(srcdir)/css/iframedialog.css \
+	$(srcdir)/css/welcome.css
 endif
 
 OXOOL_CSS = $(filter %,$(OXOOL_CSS_LST))
@@ -384,7 +385,8 @@ if ENABLE_FEEDBACK
 OXOOL_JS_LST +=\
 	src/control/IFrameDialog.js \
 	src/map/handler/Map.Infobar.js \
-	src/map/handler/Map.Feedback.js
+	src/map/handler/Map.Feedback.js \
+	src/map/handler/Map.Welcome.js
 endif
 
 OXOOL_JS_LST +=\
