新增專案模式 --with-project="專案名稱"

--- a/Makefile.am
+++ b/Makefile.am
@@ -323,6 +323,7 @@ noinst_HEADERS = $(wsd_headers) $(shared_headers) $(kit_headers) \
 dist-hook:
 	git log -1 --format=%h > $(distdir)/dist_git_hash 2> /dev/null || rm $(distdir)/dist_git_hash
 	git rev-parse --abbrev-ref HEAD | cut -d '-' -f 1 > $(distdir)/dist_git_branch 2> /dev/null || rm $(distdir)/dist_git_branch
+	( if test -f dist_project; then mv dist_project $(distdir); fi ) || rm $(distdir)/dist_project
 
 EXTRA_DIST = discovery.xml \
              favicon.ico \
