Fix top (smartmenus) menu for small window width
On Laptops: When resize the browser window or tiling it to the right
or left the whole layout would get very difficult to work with due to
the smartmenus overlap over everything else.

Introduce override-smartmenus.css file (following the applied same logic
as with override-vex.css) and make sure smartmenus are not only
displayed correctly at those sizes but that other elements such as
document's title and modified timestamp get hidden if no space is
available.

Note: since we are not using the smartmenus for mobile we can safely do
this without worrying or adjusting nothing else for smartphones.

Signed-off-by: Pedro Pinto Silva <pedro.silva@collabora.com>
Change-Id: Ib42767f2110fc7bd0f471ea490f5430ae2958021

--- a/loleaflet/Makefile.am
+++ b/loleaflet/Makefile.am
@@ -150,7 +150,8 @@ OXOOL_CSS_LST =\
 	$(srcdir)/css/btns.css \
 	$(srcdir)/css/notebookbar.css \
 	$(srcdir)/css/jssidebar.css \
-	$(srcdir)/css/override-vex.css
+	$(srcdir)/css/override-vex.css \
+	$(srcdir)/css/override-smartmenus.css
 
 if ENABLE_FEEDBACK
 OXOOL_CSS_LST += $(srcdir)/css/iframedialog.css
