更改 API: /hosting/version 傳回的內容
依據 branch 傳回不同的內容，目前只有 asus 不同

--- a/configure.ac
+++ b/configure.ac
@@ -1400,6 +1400,7 @@ AS_IF([test "$ENABLE_IOSAPP" = "true"],
       [
        echo "
 Configuration:
+    Branch name             $LOOLWSD_BRANCH
     LOKit path              ${lokit_msg}
     LO path                 $LO_PATH
     LO integration tests    ${lo_msg}
