--- a/loleaflet/Makefile.am
+++ b/loleaflet/Makefile.am
@@ -734,6 +734,9 @@ pot:
 		uiconfig/dialogs/*.js
 
 	html2po --pot --input=html/loleaflet-help.html --output=po/templates/loleaflet-help.pot --duplicates=merge
+	html2po --pot --input=welcome/welcome.html --output=po/templates/welcome.pot --duplicates=merge
+	$(srcdir)/util/appendwelcome.py po/templates/welcome.pot po/templates/loleaflet-ui.pot
+	rm po/templates/welcome.pot
 
 l10n: pot
 	for i in po/ui-*.po; do pot2po --input=po/templates/loleaflet-ui.pot --template=$$i --output=$$i.new; mv $$i.new $$i;done
