--- a/loleaflet/Makefile.am
+++ b/loleaflet/Makefile.am
@@ -737,6 +737,7 @@ pot:
 	html2po --pot --input=welcome/welcome.html --output=po/templates/welcome.pot --duplicates=merge
 	$(srcdir)/util/appendwelcome.py po/templates/welcome.pot po/templates/loleaflet-ui.pot
 	rm po/templates/welcome.pot
+	msguniq -w 78 -t UTF-8 po/templates/loleaflet-ui.pot > po/templates/loleaflet-ui.pot.new; mv po/templates/loleaflet-ui.pot.new po/templates/loleaflet-ui.pot
 
 l10n: pot
 	for i in po/ui-*.po; do pot2po --input=po/templates/loleaflet-ui.pot --template=$$i --output=$$i.new; mv $$i.new $$i;done
