sanitize-url: bump package version to 6.0.0
Signed-off-by: Mert Tumer <mert.tumer@collabora.com>
Change-Id: I7c58e3a417e7a247b781800a2ec93417d3b7bc8f

--- a/loleaflet/npm-shrinkwrap.json.in
+++ b/loleaflet/npm-shrinkwrap.json.in
@@ -323,9 +323,9 @@
       }
     },
     "@braintree/sanitize-url": {
-      "version": "4.0.1",
-      "resolved": "file:archived-packages/@braintree/sanitize-url-4.0.1-4c7210b55.tar",
-      "integrity": "sha512-3vKEuKCJIL4d2aVuwE1MdweAspwBYc+KaBAa0S4as2nXPRpvts7GdU8vtSstsHlC3esK5nf/RJrAT7PQ1+psbA== sha512-THIQtVN491hY2rTZ/h5boj0CwDKrZQIUnfaj6RbpGwRJKfmEIgNpgcCJC3KZl1Vux9bQmdE2P4Q7cYUoSUQ4MA==",
+      "version": "6.0.0",
+      "resolved": "file:archived-packages/@braintree/sanitize-url-6.0.0.tgz",
+      "integrity": "sha512-mgmE7XBYY/21erpzhexk4Cj1cyTQ9LzvnTxtzM17BJ7ERMNE6W72mQRo0I1Ud8eFJ+RVVIcBNhLFZ3GX4XFz5w==",
       "dev": true
     },
     "@iarna/cli": {
