loleaflet: 把桌面/iOS 以及 Android 輸入方法分開處理
原來的輸入方法包山包海，但只有在 Android 下沒有問題；
而在桌面模式或iOS下，仍會碰到許多組字輸入的問題，
所以另外設計組字框跟隨游標移動方法，讓各種模式及設備，
都能有良好的輸入體驗。

--- a/loleaflet/Makefile.am
+++ b/loleaflet/Makefile.am
@@ -254,6 +254,7 @@ OXOOL_JS_LST =\
 	src/layer/ImageOverlay.js \
 	src/layer/marker/ProgressOverlay.js \
 	src/layer/marker/TextInput.js \
+	src/layer/marker/TextInput-DesktopIOS.js \
 	src/layer/marker/Icon.js \
 	src/layer/marker/Icon.Default.js \
 	src/layer/marker/Marker.js \
