Revert "added inline source to debug ts in browser"
This reverts commit f623074533c5c63b9cfe1d6bc8b5528101798c7b.

--- a/loleaflet/Makefile.am
+++ b/loleaflet/Makefile.am
@@ -606,7 +606,7 @@ $(DIST_FOLDER)/welcome/%.html: $(srcdir)/welcome/%.html
 
 
 if ENABLE_DEBUG
-SourceMap=--allowJs true --sourceMap true --inlineSources true
+SourceMap=--allowJs true --sourceMap true
 endif
 
 tscompile.done: $(OXOOL_JS_SRC) $(OXOOL_TS_SRC)
