--- a/loleaflet/Makefile.am
+++ b/loleaflet/Makefile.am
@@ -246,6 +246,7 @@ OXOOL_JS_LST =\
 	src/layer/tile/CanvasTileLayer.js \
 	src/layer/SplitPanesContext.ts \
 	src/layer/CalcSplitPanesContext.ts \
+	src/layer/vector/CDarkOverlay.ts \
 	src/layer/tile/TileLayer.TableOverlay.js \
 	src/layer/ObjectFocusDarkOverlay.js \
 	src/layer/tile/WriterTileLayer.js \
