--- a/oxoolwsd.xml.in
+++ b/oxoolwsd.xml.in
@@ -164,6 +164,7 @@
     <user_interface>
       <mode type="string" desc="Controls the user interface style (classic|notebookbar)" default="@USER_INTERFACE_MODE@">@USER_INTERFACE_MODE@</mode>
       <pdf_viewer_resolution_dpi desc="The resolution dpi at which to render when viewing the pdf." type="int" default="600"></pdf_viewer_resolution_dpi>
+      <use_integration_theme desc="Use theme from the integrator" type="bool" default="false">false</use_integration_theme>
     </user_interface>
 
     <storage desc="Backend storage">
