--- a/loleaflet/Makefile.am
+++ b/loleaflet/Makefile.am
@@ -203,6 +203,7 @@ OXOOL_LIBS_JS_DST = $(patsubst %.js,$(DIST_FOLDER)/%.js,$(OXOOL_LIBS_JS))
 # this list includes both Javascript and Typescript generated files
 # in a rather precise order.
 OXOOL_JS_LST =\
+	src/docstate.js \
 	src/Leaflet.js \
 	src/errormessages.js \
 	src/othermessages.js \
